<resources>
    <string name="app_name">TourBuddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tour Buddy</string>
    <string name="nav_header_subtitle">Tour.buddy@esprit.tn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_publication_details">detailspub</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_destination">Destination</string>
    <string name="menu_claims">Claims</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_offers">Offers</string>


    <string name="select_category">Sélectionnez une catégorie</string>
</resources>